--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
                 <div class="footer__item">
                     <p class="copyright">Copyright © 2022 Breezed Co., Ltd. - by <a
-                            href="https://www.upwork.com/freelancers/~0140d785101ec66b9c" target="_blank"> Avetis Harutyunyan
+                            href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank"> Avetis Harutyunyan
                         </a>
                     </p>
 
