--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
                 <div class="footer__item">
                     <p class="copyright">Copyright © 2022 Breezed Co., Ltd. - by <a
-                            href="https://www.linkedin.com/in/avetisharutyunyan/" target="_blank"> Avetis Harutyunyan
+                            href="https://avetisharutyunyan.github.io" target="_blank"> Avetis Harutyunyan
                         </a>
                     </p>
 
@@ -417,7 +417,6 @@
         </section>
     </footer>
 
-    <script src="./js/app.js"></script>
-    <script src="./js/scroll.js"></script>
+    <script src="./js/all.js"></script>
 </body>
 </html>
